--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/jaandrle/dollar_dom_component#readme",
   "__Comment__dependencies": "Security updates: [cryptiles: >=4.1.2], [hawk: >=3.1.3], [hoek: >=4.2.1]",
   "dependencies": {
+    "cryptiles": ">=4.1.2",
     "gulp": ">3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-javascript-obfuscator": "1.1.5",
@@ -45,16 +46,17 @@
     "gulp-replace": "1.0.0",
     "gulp-sourcemaps": "2.6.4",
     "gulp-util": "3.0.8",
-    "jshint": "~2.9.6",
-    "yuidocjs": "^0.10.2",
-    "cryptiles": ">=4.1.2",
     "hawk": ">=3.1.3",
-    "hoek": ">=4.2.1"
+    "hoek": ">=4.2.1",
+    "jshint": "~2.9.6"
   },
   "__SECTION__JSHINT": "",
   "jshintConfig": {
     "esversion": 6,
     "browser": "true",
     "undef": "true"
+  },
+  "devDependencies": {
+    "jsdoc-to-markdown": "^5.0.1"
   }
 }
