--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "bugs": {
     "url": "https://github.com/jaandrle/dollar_dom_component/issues"
   },
-  "homepage": "https://github.com/jaandrle/dollar_dom_component#readme",
+  "homepage": "https://github.com/jaandrle/dollar_dom_component",
   "__Comment__dependencies": "Security updates: [cryptiles: >=4.1.2], [hawk: >=3.1.3], [hoek: >=4.2.1]",
   "dependencies": {
     "cryptiles": ">=4.1.2",
