--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bin": "bin"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "jshint": "node ./node_modules/jshint/bin/jshint --verbose",
+    "jshint_full": "node ./node_modules/jshint/bin/jshint --verbose --show-non-errors"
   },
   "repository": {
     "type": "git",
@@ -56,7 +58,7 @@
     "latedef": "true",
     "maxparams": 3,
     "maxdepth": 2,
-    "maxcomplexity": 10
+    "maxcomplexity": 11
   },
   "devDependencies": {
     "jsdoc-to-markdown": "^5.0.1"
