--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "__SECTION_GULP": "",
   "fullName": "$dom.component",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "build": "0001",
   "src_folder": "src/",
   "bin_folder": "bin/",
@@ -24,7 +24,9 @@
     "bin": "bin"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "jshint": "node ./node_modules/jshint/bin/jshint --verbose",
+    "jshint_full": "node ./node_modules/jshint/bin/jshint --verbose --show-non-errors"
   },
   "repository": {
     "type": "git",
@@ -41,11 +43,12 @@
     "gulp-concat": "2.6.1",
     "gulp-javascript-obfuscator": "1.1.5",
     "gulp-minify": "3.1.0",
+    "gulp-place": "^1.8.0",
     "gulp-rename": "1.4.0",
     "gulp-replace": "1.0.0",
     "gulp-sourcemaps": "2.6.4",
     "gulp-util": "3.0.8",
-    "jshint": "~2.9.6"
+    "jshint": "^2.12.0"
   },
   "__SECTION__JSHINT": "",
   "jshintConfig": {
@@ -55,7 +58,7 @@
     "latedef": "true",
     "maxparams": 3,
     "maxdepth": 2,
-    "maxcomplexity": 10
+    "maxcomplexity": 11
   },
   "devDependencies": {
     "jsdoc-to-markdown": "^5.0.1"
