--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "__SECTION_GULP": "",
   "fullName": "$dom.component",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "build": "0001",
   "src_folder": "src/",
   "bin_folder": "bin/",
@@ -21,7 +21,8 @@
   },
   "directories": {
     "example": "example",
-    "bin": "bin"
+    "bin": "bin",
+    "src": "src"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -58,8 +59,10 @@
     "gulp-rename": "1.4.0",
     "gulp-replace": "1.0.0",
     "gulp-sourcemaps": "2.6.4",
+    "gulp-typedoc": "^3.0.1",
     "gulp-util": "3.0.8",
-    "jsdoc-to-markdown": "^5.0.3",
-    "jshint": "^2.13.1"
+    "jshint": "^2.13.1",
+    "typedoc": "^0.21.9",
+    "typedoc-plugin-markdown": "^3.10.4"
   }
 }
